handbook/versioned_docs/version-1.3.9/description.mdx
---
id: description
title: 说明
slug: /
---

## 当前版本

![](https://img.shields.io/nuget/v/TouchSocket.svg?label=TouchSocket#crop=0&crop=0&crop=1&crop=1&height=25&id=nWQ9P&originHeight=20&originWidth=126&originalType=binary&ratio=1&rotation=0&showTitle=false&status=done&style=none&title=&width=160) ![](https://img.shields.io/nuget/v/TouchSocket.AspNetCore.svg?label=TouchSocket.AspNetCore#crop=0&crop=0&crop=1&crop=1&height=25&id=FWXGC&originHeight=20&originWidth=194&originalType=binary&ratio=1&rotation=0&showTitle=false&status=done&style=none&title=&width=245)
![](https://img.shields.io/nuget/v/TouchSocketPro.svg?label=TouchSocketPro#crop=0&crop=0&crop=1&crop=1&height=25&id=oHu5g&originHeight=20&originWidth=144&originalType=binary&ratio=1&rotation=0&showTitle=false&status=done&style=none&title=&width=179) ![](https://img.shields.io/nuget/v/TouchSocketPro.AspNetCore.svg?label=TouchSocketPro.AspNetCore#crop=0&crop=0&crop=1&crop=1&height=25&id=K0VEy&originHeight=20&originWidth=212&originalType=binary&ratio=1&rotation=0&showTitle=false&status=done&style=none&title=&width=261)

<script src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>

当前站点总访问量<span id="busuanzi_value_site_pv"></span>次

---

:::tip 公告

1. **原 RRQM 系文档，可以加 qq 群（234762506），在群文件自行获取。**

:::  


## 使用前必要阅读

TouchSocket 由作者若汝棋茗及其他贡献者开发，所有版权归作者若汝棋茗所有，程序集源代码在遵循 Apache License 2.0 的开源协议以及**附加协议**下，可**免费**供其他开发者二次开发或（商业）使用。

# Apache License 2.0 开源协议简述

- 永久权利
- 一旦被授权，永久拥有。
- 全球范围的权利
- 在一个国家获得授权，适用于所有国家。假如你在美国，许可是从印度授权的，也没有问题。
- 授权免费，且无版税
- 前期，后期均无任何费用。
- 授权无排他性
- 任何人都可以获得授权
- 授权不可撤消
- 一旦获得授权，没有任何人可以取消。比如，你基于该产品代码开发了衍生产品，你不用担心会在某一天被禁止使用该代码。

# 附加协议

<a name="qLp3q"></a>

### 个人使用须知:

- 不得将程序集用作违法犯罪活动。
- 不得将程序集单独包装售卖，申请专利等。
- 不得擦除程序集所有有关作者的信息。

**以上内容必须全部符合，个人使用授权才成立。**

### 二次开发须知:

- 不得将程序集用作违法犯罪活动。
- 不得将程序集单独包装售卖，申请专利等。
- 不得擦除程序集所有有关作者的信息。
- 二次开发完成后的作品必须附带源作品所有作者信息，包括但不限于作者名、Gitee、Github 地址等。
- **完成后**的作品（仅 TouchSocket 部分）必须将发布时最新源代码提交一份给本作者，QQ 邮箱：505554090@qq.com。

**以上内容必须全部符合，二次开发授权才成立。**

### 盈利性（商业）用途使用须知:

- 不得将程序集用作违法犯罪活动。
- 不得将程序集单独包装售卖，申请专利等。
- **不得擦除程序集所有有关作者的信息，并必须于用户可见界面（如关于）中提名。**

**以上内容必须全部符合，使用授权才成立。**

## TouchSocketPro 商用许可

TouchSocketPro 是 TouchSocket 的企业版，其 99%功能与 TouchSocket 一致。所有版权归作者若汝棋茗所有。

### TouchSocketPro 功能部分遵循：

- 限时（1h）免费测试，测试期间可参与商业使用。
- 付费使用，购买后还须遵循相关使用协议，详情咨询若汝棋茗。

**TouchSocketPro 程序集源代码不公开开源，需要付费购买。**

# 免责申明

**在使用 TouchSocket**或**TouchSocketPro 之前请进行缜密的测试。在使用期间，由本程序集造成或间接造成的所有损失，均自己承担，与本程序集无关。**
